x/programs/rust/sdk_macros/tests/ui/ignore-second-param.stderr
error: Functions with the `#[public]` attribute can only ignore the first parameter.
 --> tests/ui/ignore-second-param.rs:6:25
  |
6 | pub fn test(_: Program, _: u32) {}
  |                         ^
