x/programs/rust/sdk_macros/tests/ui/ignore-second-param.rs
use sdk_macros::public;
#[allow(unused_imports)]
use wasmlanche_sdk::Program;

#[public]
pub fn test(_: Program, _: u32) {}

fn main() {}
